--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "homepage": "https://github.com/deadlybutter/csvup#readme",
   "dependencies": {
     "aws-sdk": "^2.6.3",
+    "basic-auth": "^1.0.4",
     "express": "^4.14.0"
   }
 }
