--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "aws-sdk": "^2.6.3",
     "basic-auth": "^1.0.4",
-    "express": "^4.14.0"
+    "express": "^4.14.0",
+    "mongoose": "^4.6.0"
   }
 }
