Finished nearly the entire app

--- a/example.env
+++ b/example.env
@@ -1,2 +1,8 @@
 CLIENT_USERNAME=admin
 CLIENT_PASSWORD=password
+MONGO_URI=mongodb://localhost
+ENABLE_API=true
+API_KEY=randomString
+AWS_ACCESS_KEY_ID=randomString
+AWS_SECRET_ACCESS_KEY=randomString
+AWS_BUCKET=randomString
