--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
   "dependencies": {
     "aws-sdk": "^2.6.3",
     "basic-auth": "^1.0.4",
+    "body-parser": "^1.15.2",
     "express": "^4.14.0",
+    "express-fileupload": "0.0.5",
     "mongoose": "^4.6.0"
   }
 }
